      with additional option to show laptime from same vehicle class only (default ON).
    - [New]Personal best, last, estimated laptime display can be individually hide in JSON.
    - [New]Each info prefix text can be customized or hide in JSON.
    - [New]Each info display order can be customized via "column_index" in JSON.
    - Removed double lines horizontal layout.

* Weather widget
    - [New]Each info display order can be customized via "column_index" in JSON.
    - [New]Each info font & background color can be customized in JSON.
    - Moved "Dry/Wet" label to wetness bar.

* Core
    - Auto sorts all options in JSON file according to default setting template
      for better readability and consistency.
    - Optimized GUI update methods for widgets:
      Cruise, Deltabest, DRS, Engine, Force, Fuel, Pressure, Sectors, Session, Timing, Weather.
    - Use Linux XDG directories for storing user data (by Bernat).
    - Add Linux instructions to README.md (by Bernat).

* Misc
    - Updated customization guide with new configurable options for each widget.

TinyPedal 1.10.3 (2023-01-31)
-----------------------------
* Relative Widget
    - [New]Implemented lazy GUI update method that reduces Relative Widget CPU usage by 80% more.
    - [New]Added pitstop count display (requested by srlemke),
      re-arranged column index order to fit pitstop count display.
    - [New]Added "driver_name_mode" customization options in JSON file,
      which can be set to display either driver name, vehicle(livery) name, or combined (requested by MMartin & srlemke).
    - Added additional customization options.

* Sectors Widget
    - Now freezes and shows current lap fastest speed (thanks to Piervit's suggestion),
      and auto resets when a new lap begins.
    - Now validates session fastest speed at beginning of a new lap,
      and auto restores valid session fastest speed for fastest speed found from invalid lap.