@@ -561,20 +561,23 @@ class Setting:
             "font_name": "consolas",
             "font_size": 15,
             "font_weight": "bold",
-            "font_color_remaining": "#22CC22",
-            "font_color_last_wear": "#CCCCCC",
-            "font_color_lifespan": "#CCCC22",
-            "font_color_warning": "#FF4444",
             "bar_gap": 2,
-            "bkg_color": "#222222",
-            "show_realtime_wear": True,
-            "seconds_before_showing_realtime_wear": 10,
+            "font_color_remaining": "#22CC22",
+            "bkg_color_remaining": "#222222",
+            "show_wear_difference": True,
+            "realtime_wear_difference": True,
+            "freeze_duration": 5,
+            "font_color_wear_difference": "#CCCCCC",
+            "bkg_color_wear_difference": "#222222",
             "show_lifespan": True,
+            "font_color_lifespan": "#CCCC22",
+            "bkg_color_lifespan": "#222222",
             "warning_threshold_remaining": 30,
             "warning_threshold_wear": 3,
             "warning_threshold_laps": 5,
+            "font_color_warning": "#FF4444",
             "column_index_remaining": 1,
-            "column_index_last_wear": 2,
+            "column_index_wear_difference": 2,
             "column_index_lifespan": 3,
         },
         "weather": {
